--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -6,8 +6,8 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "shx rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
-    "deploy:full": "shx npm run build:ui && git add . && git commit -m uibuild && git push"
+    "build:ui": "shx rm -rf dist && cd ../../part2/phonebook && npm run build && shx cp -r dist ../../part3/phonebook-backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "",
   "license": "",
